fixed front page blurbs to account for html tags in content. I added a function on the model that takes the content, truncates it, and cleans and rebalances the tags

--- a/blog/static/css/front.css
+++ b/blog/static/css/front.css
@@ -51,3 +51,12 @@ div.frontpage-story
   font-size: 9pt;
   font-weight: bold;
 }
+
+/******************************************************************************
+ * smaller frontpage story
+ *****************************************************************************/
+ul.small-frontpage-story li {
+  height: 120px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
